--- a/src/Potter.Characters.Api/appsettings.json
+++ b/src/Potter.Characters.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "PotterApiConfig": {
+    "BaseUrl": "https://www.potterapi.com",
+    "Key": "$2a$10$rOgYekVSLM96/Ah7NLXq6enm4sMsRUGI4Rib9h8cMzDMfTXkLYYvi"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local);Database=Potter.Characters;User Id=sa;Password=masterkey;"
   },
