--- a/src/Potter.Characters.Api/appsettings.json
+++ b/src/Potter.Characters.Api/appsettings.json
@@ -3,8 +3,9 @@
     "BaseUrl": "https://www.potterapi.com",
     "Key": "$2a$10$rOgYekVSLM96/Ah7NLXq6enm4sMsRUGI4Rib9h8cMzDMfTXkLYYvi"
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=Potter.Characters;User Id=sa;Password=masterkey;"
+  "MongoConfig": {
+    "Database": "PotterCharacterDatabase",
+    "ConnectionString": "mongodb+srv://sa:masterkey@cluster01.mjc72.gcp.mongodb.net/PotterCharacterDatabase?retryWrites=true&w=majority"
   },
   "Logging": {
     "LogLevel": {
