--- a/src/Potter.Characters.Domain/Potter.Characters.Domain.csproj
+++ b/src/Potter.Characters.Domain/Potter.Characters.Domain.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.0.1" />
+    <PackageReference Include="MongoDB.Bson" Version="2.11.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
   </ItemGroup>
 
   <ItemGroup>
