--- a/src/Potter.Characters.Api/Potter.Characters.Api.csproj
+++ b/src/Potter.Characters.Api/Potter.Characters.Api.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.6" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
   </ItemGroup>
 
   <ItemGroup>
