--- a/src/Potter.Characters.Api/appsettings.json
+++ b/src/Potter.Characters.Api/appsettings.json
@@ -7,6 +7,9 @@
     "Database": "PotterCharacterDatabase",
     "ConnectionString": "mongodb+srv://sa:masterkey@cluster01.mjc72.gcp.mongodb.net/PotterCharacterDatabase?retryWrites=true&w=majority"
   },
+  "Redis": {
+    "ConnectionString": "104.197.205.171:32771"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
