--- a/src/Potter.Characters.IntegrationService/Potter.Characters.IntegrationService.csproj
+++ b/src/Potter.Characters.IntegrationService/Potter.Characters.IntegrationService.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
   </ItemGroup>
 
