--- a/src/Potter.Characters.Api/appsettings.json
+++ b/src/Potter.Characters.Api/appsettings.json
@@ -1,14 +1,14 @@
 {
   "PotterApiConfig": {
     "BaseUrl": "https://www.potterapi.com",
-    "Key": "$2a$10$rOgYekVSLM96/Ah7NLXq6enm4sMsRUGI4Rib9h8cMzDMfTXkLYYvi"
+    "Key": "[CHAVE_DE_INTEGRACAO]"
   },
   "MongoConfig": {
-    "Database": "PotterCharacterDatabase",
-    "ConnectionString": "mongodb+srv://sa:masterkey@cluster01.mjc72.gcp.mongodb.net/PotterCharacterDatabase?retryWrites=true&w=majority"
+    "Database": "[NOME_DO_BANCO]",
+    "ConnectionString": "[STRING_DE_CONEXAO]"
   },
   "Redis": {
-    "ConnectionString": "104.197.205.171:32771"
+    "ConnectionString": "[STRING_DE_CONEXAO]"
   },
   "Logging": {
     "LogLevel": {
